[[bin]]
name = "dbc-chain"
path = "src/main.rs"

[package]
name = "dbc"
version = "3.0.0"
default-run = "dbc-chain"
edition = "2021"

[profile.release]
panic = "unwind"
opt-level = 3

[dependencies]
dbc-cli = { package = "dbc-cli", path = "cli" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

[workspace]
members = [
  "bench",
  "cli",
  "executor",
  "inspect",
  "primitives",
  "rpc",
  "runtime",
  "testing",

  "pallets/assets",
  "pallets/staking",

  "pallets/generic-func",
  "pallets/dbc-price-ocw",
  "pallets/online-profile",
  "pallets/online-profile/rpc",
  "pallets/online-profile/rpc/runtime-api",
  "pallets/committee",
  "pallets/committee/rpc",
  "pallets/committee/rpc/runtime-api",
  "pallets/online-committee",
  "pallets/online-committee/rpc",
  "pallets/online-committee/rpc/runtime-api",
  "pallets/simple-rpc",
  "pallets/simple-rpc/rpc",
  "pallets/simple-rpc/rpc/runtime-api",
  "pallets/maintain-committee",
  "pallets/rent-machine",
  "pallets/rent-machine/rpc",
  "pallets/rent-machine/rpc/runtime-api",
  "pallets/support",
  "pallets/terminating-rental",
  "pallets/terminating-rental/rpc",
  "pallets/terminating-rental/rpc/runtime-api",
  "pallets/council-reward",
  "pallets/nfts",
  "pallets/scheduler",
]

[features]
try-runtime = ["dbc-cli/try-runtime"]
runtime-benchmarks = ["dbc-cli/runtime-benchmarks"]
