[workspace.package]
version = "3.2.0-dev"
authors = ["DeepBrainChain Developers"]
repository = "https://github.com/DeepBrainChain/DeepBrainChain-MainChain"

[profile.release]
panic = "unwind"
opt-level = 3

[workspace]
resolver = "2"
members = [
  "node",
  "node/cli",
  "node/executor",
  "node/inspect",
  "node/runtime-interface",
  "client/rpc/finality",
  "primitives",
  "rpc",
  "runtime",

  "pallets/assets",
  "pallets/staking",

  "pallets/generic-func",
  "pallets/dbc-price-ocw",
  "pallets/online-profile",
  "pallets/online-profile/rpc",
  "pallets/online-profile/rpc/runtime-api",
  "pallets/committee",
  "pallets/committee/rpc",
  "pallets/committee/rpc/runtime-api",
  "pallets/ethereum-chain-id",
  "pallets/online-committee",
  "pallets/online-committee/rpc",
  "pallets/online-committee/rpc/runtime-api",
  "pallets/simple-rpc",
  "pallets/simple-rpc/rpc",
  "pallets/simple-rpc/rpc/runtime-api",
  "pallets/maintain-committee",
  "pallets/rent-machine",
  "pallets/rent-machine/rpc",
  "pallets/rent-machine/rpc/runtime-api",
  "pallets/support",
  "pallets/terminating-rental",
  "pallets/terminating-rental/rpc",
  "pallets/terminating-rental/rpc/runtime-api",
  "pallets/council-reward",
  "pallets/nfts",
  "pallets/scheduler",
]

[workspace.dependencies]

# Substrate (wasm)
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-bags-list = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-child-bounties = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-conviction-voting = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-mmr = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-nomination-pools = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-nomination-pools-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-offences-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-ranked-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-recovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-referenda = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-root-testing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-session-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-society = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-state-trie-migration = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-whitelist = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
parity-scale-codec = { version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0", default-features = false, features = [
	"derive",
] }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-consensus-vrf = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-debug-derive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }

# Substrate (client)
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-informant = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-rpc-spec-v2 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-service-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-storage-monitor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-weights = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-state-trie-migration = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-frame-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-rpc-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-test-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
node-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

# Frontier (wasm)
ethereum = { version = "0.14.0", default-features = false, features = [
	"with-codec",
] }
ethereum-types = { version = "0.14", default-features = false }
evm = { git = "https://github.com/paritytech/evm", branch = "tgm-record-external-cost", default-features = false }
evm-gasometer = { git = "https://github.com/paritytech/evm", branch = "tgm-record-external-cost", default-features = false }
evm-runtime = { git = "https://github.com/paritytech/evm", branch = "tgm-record-external-cost", default-features = false }
fp-ethereum = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false }
fp-evm = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false }
fp-rpc = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false }
fp-self-contained = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false }
pallet-base-fee = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false }
pallet-ethereum = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false, features = ["forbid-evm-reentrancy"] }

pallet-evm = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false, features = ["forbid-evm-reentrancy", "dbc-adaptor"] }
pallet-evm-precompile-blake2 = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", default-features = false }

# Frontier (client)
fc-consensus = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39" }
fc-db = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39" }
fc-mapping-sync = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39" }
fc-rpc = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39", features = [
	"rpc-binary-search-estimate",
] }
fc-rpc-core = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39" }
fc-storage = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39" }
fp-consensus = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39" }
fp-storage = { git = "https://github.com/DeepBrainChain/DBC-EVM", branch = "polkadot-v0.9.39" }

# Other (wasm)
affix = "0.1.2"
async-trait = { version = "0.1.42" }
blake2-rfc = { version = "0.2.18", default-features = false }
derive_more = "0.99"
environmental = { version = "1.1.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.3.4" }
impl-serde = { version = "0.3.1", default-features = false }
impl-trait-for-tuples = "0.2.1"
libsecp256k1 = { version = "0.7", default-features = false }
log = { version = "0.4", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.6"
rlp = { version = "0.5", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }
serde = { version = "1.0.101", default-features = false }
sha3 = { version = "0.10", default-features = false }
slices = "0.2.0"
smallvec = "1.8.0"
strum = { version = "0.24", default-features = false, features = ["derive"] }
strum_macros = "0.24"

# Other (client)
ansi_term = "0.12.1"
assert_cmd = "2.0.10"
async-io = "1.3"
coins-bip32 = { version = "0.7.0" }
coins-bip39 = { version = "0.7.0" }
k256 = { version = "0.11.5", default-features = false }
clap = { version = "4.0.9", features = ["derive"] }
exit-future = "0.2"
flume = "0.10.9"
futures = { version = "0.3.21" }
jsonrpsee = { version = "0.16.2", default-features = false }
maplit = "1.0.2"
nix = "0.23"
parking_lot = "0.12.0"
primitive-types = "0.12.0"
prometheus = { version = "0.13.0", default-features = false }
rand = "0.7.3"
serde_json = { version = "1.0.85", default-features = false }
similar-asserts = "1.1.0"
tempfile = "3.2.0"
tiny-bip39 = { version = "0.8", default-features = false }
tokio = { version = "1.13" }
tracing = "0.1.34"
tracing-core = "0.1.29"
trie-root = "0.15.2"
url = "2.2.2"
rand_chacha = { version = "0.3", default-features = false }
once_cell = "1"
enumflags2 = { version = "0.7.5" }
bs58 = { package = "bs58", version = "0.4.0", default-features = false }
array-bytes = { version = "4.1" }
fs_extra = { version = "1" }
